# qed-sampler

./: CMakeLists.txt  README.md  io.cpp  io.h  main.cpp  qta.cpp  qta.h  test_cdf.json  test_qta.json
include/: io.h  qta.h
src/: main.cpp
